--- a/README
+++ b/README
@@ -1,5 +1,27 @@
+This is an attempt to make the Ganglia UI more usable. You should be able to drop this into
+your $HTTPD_ROOT/ganglia and it should just work.
+
+New features
+============
+
+Optional Graphs
+===============
+
+Ability to define optional graphs that are show at the top of the page for any host.
+Those are defined using overrides stored in $GANGLIA_DIR/conf directory. You need
+to make sure that directory is writeable by the Apache/Web user.
+
 This should work like the normal Ganglia web UI. The difference is that
 you need to make the conf/ directory writeable by the Apache user.
+
+Search
+======
+
+You can search for a metric or a host in a live manner. You should be able to click on the
+host or metric in the search and 
+
+Installation notes
+==================
 
 IMPORTANT:
 You will need PHP JSON extension. It comes with PHP 5.2+. If you are on 5.1
@@ -11,3 +33,9 @@ pecl is part of php-pear package on RHEL/CentOS. Make sure you have
 
 # cat /etc/php.d/json.ini 
 extension=json.so
+
+BUGS
+====
+
+In the search window when you click on a metric it should actually jump to the metric once the
+page is opened. That doesn't work. If you just press enter in the Location bar it does jump.
